Fix dialog alignment

--- a/frontend/src/components/Booking/TeamMembers.css
+++ b/frontend/src/components/Booking/TeamMembers.css
@@ -1,8 +1,3 @@
-.memberButton {
-    display: flex;
-    flex-direction: row;
-}
-
 #membersContainer {
     display:flex;
 }
